# idp-emu

./: .gitignore  CMakeLists.txt  README.md
docs/books/: PARTNER-COMPLETE-REFERENCE.md  PARTNER.md
docs/img/photos/: idp
docs/img/vector/: p-pix.ai
docs/notes/my/: fdd-notes.md  hdd-notes.md  idp-howto.txt  z80ctc-notes.md  z80dma-notes.md  z80sio-notes.md
docs/notes/patterns/: GDP-PIO.md  ROM-AVDC-INIT.md  RTC-BIOS.md  STARTUP.md
docs/roms/: WFG.htm  rom-gdp-anno.txt  rom-p-anno-alt.txt  rom-p-anno.s  rom-p-anno.txt  rom-p.s  romfdd.txt  romhdd.txt
lib/chipsex/: CMakeLists.txt
lib/chipsex/intel/: CMakeLists.txt
lib/chipsex/national/: CMakeLists.txt  mm58167.h
lib/chipsex/signetics/: CMakeLists.txt
lib/chipsex/thomson/: CMakeLists.txt
lib/chipsex/zilog/: CMakeLists.txt  z80dma.h  z80sio.h
roms/: charset_ef9365.rom
src/: CMakeLists.txt  main.cpp  partner.cpp  partner.hpp  partner_crt.cpp  partner_crt.hpp  partner_gdp.hpp
tools/: charset_ef9365.md  font-viewer.py
tools/gdp-font-viewer/: charset_ef9365.md
